# pretia

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLANNING.md  README.md  Untitled  agentcost-technical-spec-v3.md  agentcost-technical-spec-v5.md  pretia-technical-spec-v5.md  projection-engine-recommendation-addition-2.md  projection-engine-recommendation-additions.md  projection-engine-recommendations.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
action/: Dockerfile  action.yml  entrypoint.sh
agentcost/: __init__.py  cli.py  config.py  cross-cutting-robustness.md  estimate.py  runner.py  schema.py  store.py
agentcost/ci/: __init__.py  baseline.py  diff.py  github.py  report.py
agentcost/collectors/: __init__.py  base.py  cache_bust.py  generic.py  langgraph.py  openai_agents.py  qwen_agent.py
agentcost/graph/: extractor.py  layout.py  transform.py
agentcost/inputs/: __init__.py  generator.py  importer.py  schema.py  selector.py
agentcost/pricing/: __init__.py  tables.py
agentcost/projection/: __init__.py  montecarlo.py  patterns.py  projector.py  stats.py
agentcost/recommend/: __init__.py  architecture.py  base.py  classifier.py  heuristics.py  model_swap.py  prompts.py  registry.py  rules.py  score.py  verify.py  workflow.py
agentcost/report/: __init__.py  charts.py  renderer.py
agentcost/ui/: __init__.py  app.py
agentcost/validation/: __init__.py  agentcost-v2-additions-prompts.md  confidence.py  data_checks.py  directions-input-generation.md  directions-pdf-generation.md  directions-system-prompts.md  directions-workflow-agents.md  scoring.py  suite.py  validate_cmd.py  visibility.py
agents/harness/: retrieval_sim.py  run_workflow.py  step_builder.py
agents/patterns/: __init__.py  map_reduce.py  multi_hop_rag.py  multi_step_linear.py  multi_turn.py  pipeline_overrides.py  rag_pipeline.py  router.py  self_assessment_loop.py  single_step.py
agents/providers/: __init__.py  embeddings.py  llm.py  pricing_overrides.py
agents/tests/: test_integration.py
agents/workflows/: w01.py  w02.py  w04.py  w05.py  w09.py  w11.py  w12.py  w13.py  w14.py  w15.py  w16.py  w17.py  w18.py  w19.py
bt_agents/: __init__.py
bt_agents/harness/: __init__.py  retrieval_sim.py  run_workflow.py  step_builder.py  tool_sim.py
bt_agents/patterns/: map_reduce.py  multi_hop_rag.py  multi_step_linear.py  multi_turn.py  pipeline_overrides.py  rag_pipeline.py  router.py  self_assessment_loop.py  single_step.py
bt_agents/providers/: embeddings.py  llm.py  pricing_overrides.py
bt_agents/tests/: __init__.py  test_integration.py
bt_agents/workflows/: __init__.py  w01.py  w02.py  w04.py  w05.py  w09.py  w11.py  w12.py  w13.py  w14.py  w15.py  w16.py  w17.py  w18.py  w19.py
docs/: data-privacy.md  dependency-audit-2026.md  known-limitations.md  llm_analysis_prompt.md  sprint-01-code-guide.md  sprint-02-code-guide.md  sprint-03-code-guide.md  system-architecture-guide.md
docs/validation/: directions-input-generation.md  directions-pdf-generation.md  directions-system-prompts.md  directions-visualization-reporting.md  directions-workflow-agents.md  pretia-v2-additions-prompts.md
examples/: demo_profile.json  insurance_claims_agent.py
inputs/: __init__.py
inputs/generators/: __init__.py  _base.py  _llm.py  w01_support_simple.py  w02_support_complex.py  w04_compliance_review.py  w05_multimodal_extraction.py  w09_sales_outreach.py  w11_support_qwen.py  w12_extraction_deepseek.py  w13_routing_agent.py  w14_simple_rag_queries.py  w15_multihop_rag_queries.py  w16_map_reduce.py  w17_claims_agent.py  w18_long_document.py  w19_multi_turn.py
inputs/validation/: __init__.py  verify_inputs.py
output/w15_supplement/: supplement_manifest.json
pdfs/: __init__.py
pdfs/generators/: __init__.py  _llm.py  _types.py  w14_w15_insurance_corpus.py  w15_crossref_supplement.py  w16_corporate_documents.py  w17_clinical_notes.py  w17_policy_documents.py  w18_long_documents.py
pdfs/validation/: __init__.py  verify_content_coverage.py  verify_pdfs.py
pre_calibration/: pre_calibration.py
pre_calibration/checks/: engine_config.py  input_inventory.py  model_availability.py  pdf_inventory.py  pricing_consistency.py  prompt_inventory.py  rate_limit_check.py  schema_compatibility.py  workspace_check.py
pretia/: __init__.py  __main__.py  cli.py  config.py  estimate.py  runner.py  schema.py  store.py
pretia/ci/: __init__.py  baseline.py  diff.py  github.py  report.py
pretia/collectors/: __init__.py  _utils.py  anthropic_sdk.py  base.py  cache_bust.py  generic.py  langgraph.py  multi_sdk.py  openai_agents.py  openai_sdk.py  qwen_agent.py
pretia/graph/: __init__.py  colorizer.py
pretia/inputs/: __init__.py  corpus.py  generator.py  importer.py  selector.py
pretia/pricing/: __init__.py  tables.py
pretia/projection/: __init__.py  montecarlo.py  patterns.py  projector.py  stats.py
pretia/recommend/: __init__.py  architecture.py  base.py  model_swap.py  registry.py  score.py  workflow.py
pretia/report/: __init__.py  charts.py  graph.py  renderer.py
pretia/ui/: app.py  ws.py
pretia/validation/: __init__.py  confidence.py  data_checks.py  scoring.py  suite.py  validate_cmd.py  visibility.py
prompts/: manifest.json
prompts/w01_support_simple/: step1_classify_respond.txt
prompts/w02_support_complex/: step1_intake_classify.txt  step2_research_draft_loop.txt  step3_final_review.txt
prompts/w04_compliance_review/: step1_initial_review.txt  step2_self_critique.txt  step3_revision.txt
prompts/w05_multimodal_extraction/: step1_extract.txt
prompts/w09_sales_outreach/: step1_qualify.txt  step2_draft_email.txt
prompts/w11_support_qwen/: step1_classify_respond.txt
prompts/w12_extraction_deepseek/: step1_extract.txt
scripts/: _smoke_checks.py  _validation_types.py  build_rag_corpus.py  pricing_sources.md  validate.py  validate_pricing.py  verify_backtest_readiness.py
tests/: __init__.py  conftest.py
ui-frontend/: package.json  vite.config.ts
visualization/: SESSION_RECAP.md  colors.py  demo.py  export.py  utils.py
(+177 files in other folders)
