[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcost"
version = "0.1.0"
description = "Pre-deployment cost intelligence for AI agent workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "AgentCost contributors" }]
keywords = ["llm", "agents", "cost", "profiling", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pyright>=1.1",
    "build>=1.0",
]
langgraph = [
    "langgraph>=1.0",
    "langchain-core>=1.0",
]
openai = [
    "openai-agents>=0.2",
]
qwen = [
    "qwen-agent>=0.0.30",
]
ui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "jinja2>=3.1.0",
]
validation = [
    "scipy>=1.11.0",
    "scikit-learn>=1.3",
]
backtesting = [
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=1.0.0",
]

[project.scripts]
agentcost = "agentcost.cli:cli"

[project.urls]
Homepage = "https://github.com/agentcost/agentcost"
Issues = "https://github.com/agentcost/agentcost/issues"

[tool.hatch.build.targets.wheel]
packages = ["agentcost"]

[tool.hatch.build.targets.wheel.force-include]
"agentcost/models" = "agentcost/models"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B"]
# ANN401: the collector interface and JSON deserialization legitimately accept `Any`.
ignore = ["S101", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that make real LLM calls (deselect with '-m not integration')",
]

[tool.pyright]
include = ["agentcost"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
